Make light and temp card. Handle resizing.

--- a/qml.qrc
+++ b/qml.qrc
@@ -1,6 +1,14 @@
 <RCC>
     <qresource prefix="/">
+        <file>main2.qml</file>
         <file>main.qml</file>
-        <file>ContactModel.qml</file>
+        <file>OnOffButton.qml</file>
+        <file>DeviceListTest.qml</file>
+        <file>TemperatureCard.qml</file>
+        <file>LightCard.qml</file>
+    </qresource>
+    <qresource prefix="/img">
+        <file alias="temperature_icon">img/temperature_icon.png</file>
+        <file alias="light_icon">img/light_icon.png</file>
     </qresource>
 </RCC>
