--- a/qml.qrc
+++ b/qml.qrc
@@ -11,6 +11,7 @@
         <file>main.qml</file>
         <file>FlowManager.qml</file>
         <file>RoomsView.qml</file>
+        <file>Settings.qml</file>
     </qresource>
     <qresource prefix="/img">
         <file alias="temperature_icon">img/temperature_icon.png</file>
