Add NavigationBar. Add Devices Types

--- a/qml.qrc
+++ b/qml.qrc
@@ -12,9 +12,16 @@
         <file>FlowManager.qml</file>
         <file>RoomsView.qml</file>
         <file>Settings.qml</file>
+        <file>DevicesView.qml</file>
+        <file>DeviceTypesList.qml</file>
+        <file>DevicesForTypeList.qml</file>
+        <file>DeviceTypesModel.qml</file>
+        <file>NavigationBar.qml</file>
     </qresource>
     <qresource prefix="/img">
         <file alias="temperature_icon">img/temperature_icon.png</file>
         <file alias="light_icon">img/light_icon.png</file>
+        <file alias="arrow_left">img/arrow_left.png</file>
+        <file alias="previous_item">img/ic_action_previous_item.png</file>
     </qresource>
 </RCC>
