--- a/qml.qrc
+++ b/qml.qrc
@@ -17,6 +17,7 @@
         <file>DevicesForTypeList.qml</file>
         <file>DeviceTypesModel.qml</file>
         <file>NavigationBar.qml</file>
+        <file>Color.js</file>
     </qresource>
     <qresource prefix="/img">
         <file alias="temperature_icon">img/temperature_icon.png</file>
