--- a/qml.qrc
+++ b/qml.qrc
@@ -27,6 +27,7 @@
         <file>AddDeviceView.qml</file>
         <file>ErrorBar.qml</file>
         <file>Controller.js</file>
+        <file>TabView.qml</file>
     </qresource>
     <qresource prefix="/img">
         <file alias="temperature_icon">img/temperature_icon.png</file>
