--- a/qml.qrc
+++ b/qml.qrc
@@ -13,7 +13,7 @@
         <file>RoomsView.qml</file>
         <file>DevicesView.qml</file>
         <file>DeviceTypesList.qml</file>
-        <file>DevicesForTypeList.qml</file>
+        <file>DevicesForTypeView.qml</file>
         <file>DeviceTypesModel.qml</file>
         <file>NavigationBar.qml</file>
         <file>ListViewItem.qml</file>
