--- a/qml.qrc
+++ b/qml.qrc
@@ -28,6 +28,7 @@
         <file>ErrorBar.qml</file>
         <file>Controller.js</file>
         <file>TabView.qml</file>
+        <file>DeviceController.qml</file>
     </qresource>
     <qresource prefix="/img">
         <file alias="temperature_icon">img/temperature_icon.png</file>
@@ -35,6 +36,7 @@
         <file alias="arrow_left">img/arrow_left.png</file>
         <file alias="previous_item">img/ic_action_previous_item.png</file>
         <file>img/add.png</file>
+        <file alias="close">img/close.png</file>
     </qresource>
-    <qresource prefix="/values"/>
+
 </RCC>
