--- a/qml.qrc
+++ b/qml.qrc
@@ -31,6 +31,7 @@
         <file>DeviceController.qml</file>
         <file>Progress.qml</file>
         <file>RefreshableView.qml</file>
+        <file>CameraView.qml</file>
     </qresource>
     <qresource prefix="/img">
         <file alias="temperature_icon">img/temperature_icon.png</file>
