Introduce ShpLightText standard font

--- a/qml.qrc
+++ b/qml.qrc
@@ -35,6 +35,7 @@
         <file>fonts/Nexa_light.otf</file>
         <file>fonts/Nexa_bold.otf</file>
         <file>SquareImage.qml</file>
+        <file>ShpLightText.qml</file>
     </qresource>
     <qresource prefix="/img">
         <file alias="temperature_icon">img/temperature_icon.png</file>
