--- a/qml.qrc
+++ b/qml.qrc
@@ -37,6 +37,7 @@
         <file>js/Utils.js</file>
         <file>ShpTextField.qml</file>
         <file>ShpComboBox.qml</file>
+        <file>AlarmCard.qml</file>
     </qresource>
     <qresource prefix="/img">
         <file alias="temperature_icon">img/temperature_icon.png</file>
@@ -64,6 +65,8 @@
         <file>img/icon_on.png</file>
         <file>img/icon_termometer.png</file>
         <file>img/icon_select.png</file>
+        <file>img/icon_alarm_on.png</file>
+        <file>img/icon_alarm_off.png</file>
     </qresource>
     <qresource prefix="/font">
         <file>fonts/Nexa_light.otf</file>
